[dependencies]
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Shinobu Hayashi <philispaxil@gmail.com>"]
categories = ["development-tools", "web-programming", "accessibility"]
description = "Rust alternative aria-query"
edition = "2021"
keywords = ["JavaScript", "TypeScript", "accessibility"]
license-file = "LICENSE"
name = "aria_query"
repository = "https://github.com/oxc-project/aria-query"
rust-version = "1.60"
version = "0.1.0"
